# sudkosolver

./: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
res/: README
src/: Makefile.am  Makefile.in  generate1.cpp  generate1.h  main.cc  resources.txt  solve.cpp  solve.h
