## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = sudukosolver

sudukosolver_SOURCES = \
	main.cc \
	resources.txt \
	generate1.cpp \
	generate1.h \
	solve.cpp \
	solve.h

sudukosolver_LDFLAGS = 

sudukosolver_LDADD = 


